--- a/templates/forms/new_show.html
+++ b/templates/forms/new_show.html
@@ -16,7 +16,7 @@
       </div>
       <div class="form-group">
           <label for="start_time">Start Time</label>
-          {{ form.start_time(class_ = 'form-control', placeholder='YYYY-MM-DD HH:MM', autofocus = true) }}
+          {{ form.start_time(class_ = 'form-control', placeholder='DD-MM-YYYY HH:MM', autofocus = true) }}
         </div>
       <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
     </form>
