--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/main.html' %} {% block title %}Venue Search{% endblock %} {% block content %} <div class="row">
 	<div class="col-sm-6">
 		<h1 class="monospace"> {{ venue.name }} </h1>
-		<p> class="subtitle"> ID: {{venue.id}} </p>
+		<p class="subtitle"> ID: {{ venue.id }} </p>
 		<div class="genres"> {% for genre in venue.genres %} <span class="genre">{{ genre }}</span> {% endfor %} </div>
 		<p>
 			<i class="fas fa-globe-americas"></i> {{ venue.city }}, {{ venue.state }}
@@ -13,13 +13,13 @@
 			<i class="fas fa-phone-alt"></i> {% if venue.phone %}{{ venue.phone }}{% else %}No Phone{% endif %}
 		</p>
 		<p>
-			<i class="fas fa-link"></i> {% if venue.website %}<a href="{{ venue.website }}" target="_blank">{{ venue.website }}</a>{% else %}No Website{% endif %}
+			<i class="fas fa-link"></i> {% if venue.website %}<a href="{{ venue.website }}" target="_blank">{{
+				venue.website }}</a>{% else %}No Website{% endif %}
 		</p>
 		<p>
-			<i class="fab fa-facebook-f"></i> {% if venue.facebook_link %}<a href="{{ venue.facebook_link }}" target="_blank">{{ venue.facebook_link }}</a>{% else %}No Facebook Link{% endif %}
-		</p>
-		{% if venue.seeking_talent %}
-		<div class="seeking">
+			<i class="fab fa-facebook-f"></i> {% if venue.facebook_link %}<a href="{{ venue.facebook_link }}"
+				target="_blank">{{ venue.facebook_link }}</a>{% else %}No Facebook Link{% endif %}
+		</p> {% if venue.seeking_talent %} <div class="seeking">
 			<p class="lead">Currently seeking talent</p>
 			<div class="description">
 				<i class="fas fa-quote-left"></i> {{ venue.seeking_description }} <i class="fas fa-quote-right"></i>
@@ -33,17 +33,19 @@
 	</div>
 </div>
 <section>
-	<h2 class="monospace">{{ venue.upcoming_shows_count }} Upcoming {% if venue.upcoming_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
+	<h2 class="monospace">{{ venue.upcoming_shows_count }} Upcoming {% if venue.upcoming_shows_count == 1 %}Show{% else
+		%}Shows{% endif %}</h2>
 	<div class="row"> {%for show in venue.upcoming_shows %} <div class="col-sm-4">
 			<div class="tile tile-show">
 				<img src="{{ show.artist_image_link }}" alt="Show Artist Image" />
 				<h5><a href="/artists/{{ show.artist_id }}">{{ show.artist_name }}</a></h5>
 				<h6>{{ show.start_time|datetime('full') }}</h6>
 			</div>
-		</div> {% endfor %}	</div>
+		</div> {% endfor %} </div>
 </section>
 <section>
-	<h2 class="monospace">{{ venue.past_shows_count }} Past {% if venue.past_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
+	<h2 class="monospace">{{ venue.past_shows_count }} Past {% if venue.past_shows_count == 1 %}Show{% else %}Shows{%
+		endif %}</h2>
 	<div class="row"> {%for show in venue.past_shows %} <div class="col-sm-4">
 			<div class="tile tile-show">
 				<img src="{{ show.artist_image_link }}" alt="Show Artist Image" />
@@ -54,4 +56,4 @@
 </section>
 
 <a href="/venues/{{ venue.id }}/edit"><button class="btn btn-primary btn-lg">Edit</button></a>
-<a><button class="btn btn-danger btn-lg venue_delete" id="{{ venue.id }}">Delete</button></a>{% endblock %}
+<a><button class="btn btn-danger btn-lg venue_delete" id="{{ venue.id }}">Delete</button></a> {% endblock %}
